??? 0.5.2
   - New module for SSH public keys
   - check file permissions on login page
   - fixed bugs:
    -> creation of home directories did not work

19.10.2005 0.5.1
   - Samba 3: added support for account expiration
   - fixed bugs:
    -> automatic UID/GID assignment did not fully work
    -> PDF: additional groups for Unix users
    -> inetOrgPerson: fixed mobile number
    -> Samba 2/3: passwords fixed for file uploads (1311561)
    -> Samba 3: fixed logon hours (patch 1311915)
    -> Samba 3: loading of domain setting from profile did not work
    -> Quota: profile settings fixed
    -> reduced memory usage


28.09.2005 0.5.0
   - Samba 2/3: added display name in account pages
   - fixed bugs:
    -> fixed error message when creating new accounts with shadowAccount
    -> added missing help entries on main account page
    -> Samba 2/3: fixed settings for password expiration, no password and deactivated account
    -> changing of RDN caused problems in some cases


08.09.2005 0.5.rc3
   - INFO messages no longer prevent changing to subpages of a module
   - fixed bugs:
    -> buttons on account page are better sorted
    -> account module: some problems solved when used for user accounts
    -> nisMailAlias: fixed missing RDN possibility
    -> fixed conflicts when accounts were built with other base modules
    -> Samba 2/3: setting allowed workstations failed
    -> magic_quotes_gpc = Off prevented editing of accounts
    -> fixed help links on Samba and Unix pages


18.08.2005 0.5.rc2
   - allow user accounts based only on "account" module
   - inetOrgPerson: allow setting a password if posixAccount is not active
   - fixed bugs:
    -> removed Blowfish encryption (bad performance)
    -> Kolab now complains if no user password is set


08.08.2005 0.5.rc1
   - Kolab 2 support
   - added manager and post office box for inetOrgPerson
   - Samba 3: added support for logon hours
   - Samba 3: added sambaSID as possible RDN attribute